# tod

./: README.md
calibration/: CMakeLists.txt  input_points.txt  input_points.txt~  input_points_15.txt
calibration/include/: calibrator.h
calibration/src/: calibration.cpp  calibrator.cpp
capture/: CMakeLists.txt
capture/include/: Capture.h  PointCloudRegistration.h  PoseEstimation.h  RgbdUtil.h
capture/src/: Capture.cpp  OffScreenRenderer.cpp  PointCloudRegistration.cpp  PoseEstimation.cpp  RgbdUtil.cpp  main.cpp
detect/: CMakeLists.txt
detect/include/: BinaryStream.h  Tod.h  XtionGrabber.h
detect/src/: BinaryStream.cpp  OffScreenRenderer.cpp  RgbdUtil.cpp  XtionGrabber.cpp  detect.cpp  main.cpp  util.cpp
makePattern/: CMakeLists.txt
makePattern/src/: makePattern.cpp
train/: CMakeLists.txt
train/include/: OffScreenRenderer.h  PinholeCamera.h  Tod.h
train/src/: OffScreenRenderer.cpp  main.cpp  train.cpp
